--- a/package.json
+++ b/package.json
@@ -27,17 +27,21 @@
     "@capacitor/core": "5.6.0",
     "@capacitor/device": "^5.0.6",
     "@capacitor/filesystem": "^5.2.0",
+    "@capacitor/geolocation": "^5.0.6",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.7",
     "@capacitor/preferences": "^5.0.6",
     "@capacitor/push-notifications": "^5.1.0",
     "@capacitor/status-bar": "5.0.6",
+    "@capacitor/toast": "^5.0.6",
     "@ionic/angular": "^7.0.0",
     "@ionic/storage-angular": "^4.0.0",
+    "@mediapipe/tasks-vision": "^0.10.9",
     "bootstrap": "^5.3.2",
     "ionicons": "^7.0.0",
     "moment": "^2.30.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
@@ -54,6 +58,7 @@
     "@capacitor/cli": "5.6.0",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/offscreencanvas": "^2019.7.3",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^7.26.0",
