--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
+    "@capacitor-mlkit/barcode-scanning": "^5.3.0",
     "@capacitor/android": "5.6.0",
     "@capacitor/app": "5.0.6",
     "@capacitor/camera": "^5.0.8",
     "@capacitor/core": "5.6.0",
     "@capacitor/device": "^5.0.6",
+    "@capacitor/dialog": "^5.0.6",
     "@capacitor/filesystem": "^5.2.0",
     "@capacitor/geolocation": "^5.0.6",
     "@capacitor/haptics": "5.0.6",
@@ -36,7 +38,6 @@
     "@capacitor/toast": "^5.0.6",
     "@ionic/angular": "^7.0.0",
     "@ionic/storage-angular": "^4.0.0",
-    "@mediapipe/tasks-vision": "^0.10.9",
     "bootstrap": "^5.3.2",
     "ionicons": "^7.0.0",
     "moment": "^2.30.1",
