--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "moment": "^2.30.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.2",
+    "swiper": "^11.0.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
