--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
+    "@capacitor-community/app-icon": "^4.1.1",
     "@capacitor-mlkit/barcode-scanning": "^5.3.0",
     "@capacitor/android": "5.6.0",
     "@capacitor/app": "5.0.6",
@@ -43,7 +44,6 @@
     "moment": "^2.30.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.2",
-    "swiper": "^11.0.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
